Add whitelist to restrict the columns to sync

--- a/config/salesforce.example.properties
+++ b/config/salesforce.example.properties
@@ -23,6 +23,7 @@ salesforce.password.token=
 salesforce.consumer.key=
 salesforce.consumer.secret=
 salesforce.object=Lead
+salesforce.object.columns.whitelist=Id, FirstName, LastName
 salesforce.push.topic.name=IncomingLeads
 kafka.topic=salesforce_leads
 curl.logging=false
